# bot

./: .gitignore  LICENSE  TODO  bot  bot.cabal  log
exec/: Main.hs
lib/Bot/: Action.hs  Config.hs  Free.hs  Parser.hs  Run.hs  Types.hs  Util.hs
lib/Bot/Action/: Action.hs  Git.hs  Maven.hs  StopWatch.hs  Tomcat.hs  XML.hs
lib/Bot/Parser/: Command.hs  Parser.hs  Project.hs
test/Bot/Test/: TestParser.hs
test/data/my-app4/src/main/java/com/mycompany/app/: App.java
test/src/Bot/Test/: TestUtil.hs
tests/: Main.hs
tests/Bot/Test/: Integration.hs  Parser.hs  TestIntegration.hs  TestParser.hs  Util.hs
