name:                bot
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              André Gustavo Rigon
maintainer:          andregrigon@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib  
  build-depends:       
    base         == 4.6.*,
    text         == 1.1.*,
    text-format  == 0.3.*,
    transformers == 0.3.*
  exposed-modules:
    Bot.Parser,
    Bot.Types,
    Bot.Util
  default-language:    Haskell2010
  ghc-options:         
    -Wall 
    -fwarn-tabs -fwarn-incomplete-uni-patterns 
    -fwarn-incomplete-record-updates  
    -fwarn-monomorphism-restriction 
    -fwarn-auto-orphans -fno-warn-name-shadowing    

executable bot
  hs-source-dirs:      exec
  main-is:             Main.hs
  build-depends:       
    base         == 4.6.*,
    bot    
  default-language:    Haskell2010
  ghc-options:         
    -Wall 
    -fwarn-tabs -fwarn-incomplete-uni-patterns 
    -fwarn-incomplete-record-updates  
    -fwarn-monomorphism-restriction 
    -fwarn-auto-orphans -fno-warn-name-shadowing      

test-suite test-bot
  hs-source-dirs:      tests
  main-is:             Main.hs  
  build-depends:  
    base         == 4.6.*,
    bot,    
    directory    == 1.2.*,
    HUnit,    
    test-framework,
    test-framework-hunit,
    test-framework-th,
    text         == 1.1.*    
  type:                exitcode-stdio-1.0      
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  ghc-options:         
    -Wall 
    -fwarn-tabs -fwarn-incomplete-uni-patterns 
    -fwarn-incomplete-record-updates  
    -fwarn-monomorphism-restriction 
    -fwarn-auto-orphans -fno-warn-name-shadowing
    -fno-warn-missing-signatures
