name:                bot
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              André Gustavo Rigon
maintainer:          andregrigon@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib  
  build-depends:       
    base          == 4.6.*,
    attoparsec    == 0.12.*,
    directory     == 1.2.*,
    free          == 4.9.*,
    monad-loops   == 0.4.*,
    process       == 1.2.*,
    temporary     == 1.2.*,
    text          == 1.1.*,
    text-format   == 0.3.*,
    transformers  == 0.4.*,
    unix          == 2.7.*
  exposed-modules:
    Bot.Action.Action,
    Bot.Action.Git,
    Bot.Action.Maven,
    Bot.Config,
    Bot.Parser.Command,
    Bot.Parser.Parser,
    Bot.Parser.Project,
    Bot.Run,
    Bot.Types,
    Bot.Util
  default-language:    Haskell2010
  ghc-options:         
    -threaded
    -Wall 
    -fwarn-tabs -fwarn-incomplete-uni-patterns 
    -fwarn-incomplete-record-updates  
    -fwarn-monomorphism-restriction 
    -fwarn-auto-orphans -fno-warn-name-shadowing    

executable bot
  hs-source-dirs:      exec
  main-is:             Main.hs
  build-depends:       
    base         == 4.6.*,
    bot    
  default-language:    Haskell2010
  ghc-options:         
    -threaded
    -Wall 
    -fwarn-tabs -fwarn-incomplete-uni-patterns 
    -fwarn-incomplete-record-updates  
    -fwarn-monomorphism-restriction 
    -fwarn-auto-orphans -fno-warn-name-shadowing      

test-suite bot-test
  hs-source-dirs:      test/src
  main-is:             Main.hs  
  build-depends:  
    base         == 4.6.*,
    bot,    
    directory    == 1.2.*,
    HUnit,    
    test-framework,
    test-framework-hunit,
    test-framework-th,
    text         == 1.1.*    
  type:                exitcode-stdio-1.0      
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  ghc-options:         
    -threaded
    -Wall 
    -fwarn-tabs -fwarn-incomplete-uni-patterns 
    -fwarn-incomplete-record-updates  
    -fwarn-monomorphism-restriction 
    -fwarn-auto-orphans -fno-warn-name-shadowing
    -fno-warn-missing-signatures
